--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -12,6 +12,47 @@ body{
 	font-family:Arial, calibri, helvetica, "gill sans", "sans-serif";
 }
 
+.nav ul {
+    list-style: none;
+}
+
+.nav ul li {
+    text-align: center;
+    float: left;
+    /* normalize look of nav buttons */
+    width: 20%;
+}
+
+.nav ul li a {
+    color: #FFFFFF;
+    background-color: #150578;
+    text-decoration: none;
+    /* vertically center text by making */
+    /* line height equal to parent height */
+    line-height: 3rem;
+    /* make a tag fill parent li so that the entire */
+    /* area within the button is clickable */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav ul li#navActive, .nav ul li#navActive a {
+    /* indicate which page visitor is viewing by inverting */
+    /* colors for corresponding nav button */
+    background-color: #FFFFFF;
+    /* prevent clashes with global rules */
+    color: #150578;
+}
+
+.nav ul li:hover, .nav ul li#navActive:hover, 
+.nav ul li:focus, .nav ul li#navActive:focus, 
+.nav ul li a:hover, .nav ul li#navActive a:hover,
+.nav ul li a:focus, .nav ul li#navActive a:focus{
+    background-color: #3083DC;
+    color:#FFFFFF;
+}
+
 button{
     background-color:#FFFFFF;
     color: #150578;
@@ -27,10 +68,10 @@ button.active {
     color:#FFFFFF;
     background-color: #150578;
     border-color: #FFFFFF;
-
 }
 
-button:hover{
-    font-size: 110%;
-    border-width: 5px;
+button:hover, button:focus{
+    background-color: #3083DC;
+    color:#FFFFFF;
 }
+
