Separate Nav bar from Main page content

--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -12,45 +12,54 @@ body{
 	font-family:Arial, calibri, helvetica, "gill sans", "sans-serif";
 }
 
-.nav ul {
+/* nav{
+    font-size: 0;
+} */
+
+nav ul {
     list-style: none;
 }
 
-.nav ul li {
+nav ul li {
     text-align: center;
-    float: left;
+    display:inline-block;
+    margin-inline-end: -7px;
     /* normalize look of nav buttons */
     width: 20%;
 }
 
-.nav ul li a {
+nav ul li a {
     color: #FFFFFF;
     background-color: #150578;
     text-decoration: none;
-    /* vertically center text by making */
-    /* line height equal to parent height */
+    /* make nav bar taller than just the text */
     line-height: 3rem;
     /* make a tag fill parent li so that the entire */
     /* area within the button is clickable */
     display: flex;
     justify-content: center;
     align-items: center;
+    /* margin-right: -5%; */
+
 }
 
-.nav ul li#navActive, .nav ul li#navActive a {
+nav ul li#navActive, nav ul li#navActive a {
     /* indicate which page visitor is viewing by inverting */
     /* colors for corresponding nav button */
     background-color: #FFFFFF;
-    /* prevent clashes with global rules */
     color: #150578;
 }
 
-.nav ul li:hover, .nav ul li#navActive:hover, 
-.nav ul li:focus, .nav ul li#navActive:focus, 
-.nav ul li a:hover, .nav ul li#navActive a:hover,
-.nav ul li a:focus, .nav ul li#navActive a:focus{
+nav ul li:hover, nav ul li#navActive:hover, 
+nav ul li:focus, nav ul li#navActive:focus, 
+nav ul li a:hover, nav ul li#navActive a:hover,
+nav ul li a:focus, nav ul li#navActive a:focus{
     background-color: #3083DC;
     color:#FFFFFF;
+}
+
+div.mainPage{
+    margin-top: 3rem;
 }
 
 button{
