--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -109,3 +109,11 @@ table , td, th{
     border : none;
 }
 
+.whiteBG {
+    background-color: #FFFFFF;
+    font-weight: bold;
+}
+
+.inline {
+    display: inline-block;
+}
